CSS - Reglas CSS - selector por etiqueta y por id

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <title>Curriculum Vitae - Título</title>
+        <meta charset="UTF-8" />
+        <title>Curriculum Vitae</title>
+        <link rel="stylesheet" href="public/stylesheets/style.css">
      </head>
      <body>
         <header>
-            <h1>Curriculum Vitae de Manuel Cañizares San Lucas</h1>
+            <h1 id="title">Curriculum Vitae</h1>
         </header>
         <nav>
-            <ul>
+            <ul id="links">
                 <li><a href="#secciondatos">Datos Personales</a></li>
                 <li><a href="#seccionredes">Redes Sociales</a></li>
                 <li><a href="#seccionhabilidades">Habilidades Profesionales</a></li>
