--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
             <ul id="links">
                 <li><a href="#secciondatos">Datos Personales</a></li>
                 <li><a href="#seccionredes">Redes Sociales</a></li>
+                <li><a href="#seccionidiomas">Idiomas</a></li>
                 <li><a href="#seccionhabilidades">Habilidades Profesionales</a></li>
                 <li><a href="#secciontransversales">Contenidos Transversales</a></li>
                 <li><a href="#seccioncontactenos">Contáctenos</a></li>
             </ul>
         </nav>
-        <section id="secciondatos">
+        <section id="secciondatos" class="seccion">
             <h2>Datos Personales</h2>
             <p>¡Hola! Soy Manuel Cañizares San Lucas, con experiencia en desarrollo web en front end y back end. 
                 Participo en todas las etapas del ciclo de desarrollo de proyectos web dinámicos. 
                 Además, tengo sólidos conocimientos en gestión de proyectos y relaciones con los clientes.
             </p>
         </section>
-        <section id="seccionredes">
+        <section id="seccionredes" class="seccion">
             <h2>Redes sociales</h2>
             <span>
                 <a href="https://www.linkedin.com/company/espol/" target="_blank">
@@ -36,7 +37,32 @@
                 </a>
             </span>
         </section>
-        <section id="seccionhabilidades">
+        <section id="seccionidiomas" class="seccion">
+            <table>
+                <thead>
+                    <th>Idioma</th>
+                    <th>Básico</th>
+                    <th>Intermedio</th>
+                    <th>Avanzado</th>
+                    <th>Nativo</th>
+                </thead>
+                <tr>
+                    <td>Español</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>Inglés</td>
+                    <td></td>
+                    <td>X</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </section>
+        <section id="seccionhabilidades" class="seccion">
             <h2>Habilidades Profesionales</h2>
             <ul>
                 <li>HTML & CSS</li>
@@ -46,7 +72,7 @@
                 <li>Express</li>
             </ul>
         </section>
-        <section id="secciontransversales">
+        <section id="secciontransversales" class="seccion">
             <h2>Contenidos Transversales</h2>
             <ol>
                 <li>Docker</li>
@@ -55,7 +81,7 @@
                 <li>Scrum</li>
             </ol>
         </section>
-        <section id="seccioncontactenos">
+        <section id="seccioncontactenos" class="seccion">
             <h2>Contáctame</h2>
             <h3>Sus datos</h3>
             <h3>Ubicación</h3>
