CSS - Selectores por clase y compuestos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </span>
         </section>
         <section id="seccionidiomas" class="seccion">
+            <h2>Idiomas</h2>
             <table>
+                <caption>Habilidad en idiomas</caption>
                 <thead>
                     <th>Idioma</th>
                     <th>Básico</th>
